--- a/SimpleLogin/app/build.gradle
+++ b/SimpleLogin/app/build.gradle
@@ -5,6 +5,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: "androidx.navigation.safeargs"
 apply plugin: 'com.android.application'
 
+repositories {
+    mavenCentral()
+    maven { url "https://maven.pkg.jetbrains.space/public/p/kotlinx-html/maven" }
+}
+
 android {
     compileSdkVersion 32
 
@@ -74,7 +79,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'androidx.core:core-ktx:1.8.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.7'
     implementation 'com.google.android.material:material:1.6.1'
@@ -84,11 +90,12 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "androidx.biometric:biometric:1.1.0"
     implementation "androidx.browser:browser:1.4.0"
-
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 
     // Shared view model
     implementation "androidx.fragment:fragment-ktx:1.4.1"
+    androidTestImplementation 'com.kaspersky.android-components:kaspresso:1.5.0'
 }
